--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,7 @@ services:
   app:
     container_name: app-prod
     image: app-prod
+    domainname: "app-prod"
     build:
       context: .
       target: production
