--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_REQUEST_OPTIONS_HOST=xchange-plant-app.herokuapp.com
+REACT_APP_REQUEST_OPTIONS_HOST=xchange-plant-api.herokuapp.com/
 REACT_APP_REQUEST_OPTIONS_PORT=443
 REACT_APP_REQUEST_OPTIONS_HTTP_PROTOCOL=https
