--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.25.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "crypto-js": "^4.1.1",
+    "fast-xml-parser": "^3.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
