--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +13,7 @@
     "bootstrap": "^5.0.2",
     "crypto-js": "^4.1.1",
     "fast-xml-parser": "^3.19.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
