--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@popperjs/core": "^2.9.3",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -26,6 +27,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.4",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
