--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:runInBand": "react-scripts test --runInBand",
     "eject": "react-scripts eject",
     "eslint-f": "npx eslint . --fix",
     "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
