--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
+    "no-useless-escape": "off",
     "import/no-extraneous-dependencies": 1,
     "no-underscore-dangle":  1,
     "no-unused-expressions": 1
