Add tests for `Login` component
issue #2

--- a/package.json
+++ b/package.json
@@ -71,10 +71,14 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "4.x",
+    "jest-localstorage-mock": "^2.4.18",
     "react-test-renderer": "^17.0.2",
     "stylelint": "13.x",
     "stylelint-config-standard": "21.x",
     "stylelint-csstree-validator": "1.x",
     "stylelint-scss": "3.x"
+  },
+  "jest": {
+    "resetMocks": false
   }
 }
