--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
     "dev": "docker-compose -f docker-compose.dev.yml up",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy-cloud": "scp -r ./build/* root@137.184.10.36:/var/www/horticultural-exchange"
   },
   "eslintConfig": {
     "extends": [
