--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "horticultural-exchange",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Bluette1.github.io/horticultural-exchange",
+  "homepage": ".",
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "@reach/router": "^1.3.4",
