Add new deployment details

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-REACT_APP_REQUEST_OPTIONS_HOST=164.90.146.95
-REACT_APP_REQUEST_OPTIONS_PORT=3000
-REACT_APP_REQUEST_OPTIONS_HTTP_PROTOCOL=http
+REACT_APP_REQUEST_OPTIONS_HOST=igrow-plant-api.herokuapp.com
+REACT_APP_REQUEST_OPTIONS_PORT=443
+REACT_APP_REQUEST_OPTIONS_HTTP_PROTOCOL=https
+DISABLE_ESLINT_PLUGIN=true
