--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,9 @@
     "import/no-unresolved": "off",
     "no-shadow": "off",
     "no-useless-escape": "off",
+    "react/forbid-prop-types": 1,
+    "react/no-unknown-property": 1,
+    "react/destructuring-assignment": 1,
     "import/no-extraneous-dependencies": 1,
     "no-underscore-dangle":  1,
     "no-unused-expressions": 1
