--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
-REACT_APP_REQUEST_OPTIONS_HOST=igrow-api.fly.dev
+REACT_APP_REQUEST_OPTIONS_HOST=igrow-api.onrender.com
 REACT_APP_REQUEST_OPTIONS_PORT=443
 REACT_APP_REQUEST_OPTIONS_HTTP_PROTOCOL=https
-DISABLE_ESLINT_PLUGIN=true
